retos de dia1 de maquetacion finalizados

--- a/maquetacion_basica/blog.html
+++ b/maquetacion_basica/blog.html
@@ -13,13 +13,11 @@
         <a class="enlaces" href="http://127.0.0.1:5500/maquetacion_basica/galery.html">Galería</a>
         <a class="enlaces" href="http://127.0.0.1:5500/maquetacion_basica/blog.html">Blog</a>
     </header>
-    <article>
-        <h1 class="title">Un Viaje Inesperado</h1>
-    </article>
-    <article><div class="inf">
-        <div class="img10">
-            <img class="imagen10" src="imagen10.jpg" alt="">
-        </div>
+   <h1 class="title">Un viaje inesperado</h1>
+   <article class="container">
+    <img src="" alt="">
+    <img class="im" src="imagen10.jpg" alt="">
+    <div class="inf">
         <p class="text">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum quaerat mollitia voluptas odio doloremque voluptatibus, provident animi doloribus eum quis iure ducimus explicabo inventore ipsam officia sunt! Tempore, earum alias.
             Doloribus iste praesentium vero nesciunt voluptatum ipsum commodi, corrupti similique quidem reiciendis sapiente, ipsam adipisci? Animi, ipsum? Veniam error enim dicta non mollitia! Consequuntur, aut eaque asperiores tempora doloribus doloremque.
@@ -36,11 +34,11 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum quaerat mollitia voluptas odio doloremque voluptatibus, provident animi doloribus eum quis iure ducimus explicabo inventore ipsam officia sunt! Tempore, earum alias.
             Doloribus iste praesentium vero nesciunt voluptatum ipsum commodi, corrupti similique quidem reiciendis sapiente, ipsam adipisci? Animi, ipsum? Veniam error enim dicta non mollitia! Consequuntur, aut eaque asperiores tempora doloribus doloremque.
         </p>
-    
+        <p class="text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum quaerat mollitia voluptas odio doloremque voluptatibus, provident animi doloribus eum quis iure ducimus explicabo inventore ipsam officia sunt! Tempore, earum alias.
+            Doloribus iste praesentium vero nesciunt voluptatum ipsum commodi, corrupti similique quidem reiciendis sapiente, ipsam adipisci? Animi, ipsum? Veniam error enim dicta non mollitia! Consequuntur, aut eaque asperiores tempora doloribus doloremque.
+        </p>
     </div>
-   
-</section>
-</article>
-
+   </article>
 </body>
 </html>
