--- a/maquetacion_basica/homePage.html
+++ b/maquetacion_basica/homePage.html
@@ -34,6 +34,10 @@
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum quaerat mollitia voluptas odio doloremque voluptatibus, provident animi doloribus eum quis iure ducimus explicabo inventore ipsam officia sunt! Tempore, earum alias.
                     Doloribus iste praesentium vero nesciunt voluptatum ipsum commodi, corrupti similique quidem reiciendis sapiente, ipsam adipisci? Animi, ipsum? Veniam error enim dicta non mollitia! Consequuntur, aut eaque asperiores tempora doloribus doloremque.
                 </p>
+                <p class="text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum quaerat mollitia voluptas odio doloremque voluptatibus, provident animi doloribus eum quis iure ducimus explicabo inventore ipsam officia sunt! Tempore, earum alias.
+                    Doloribus iste praesentium vero nesciunt voluptatum ipsum commodi, corrupti similique quidem reiciendis sapiente, ipsam adipisci? Animi, ipsum? Veniam error enim dicta non mollitia! Consequuntur, aut eaque asperiores tempora doloribus doloremque.
+                </p>
             </div>
            
         </section>
