pagina codenotch finalizada

--- a/Paginacodenotch/cursos.html
+++ b/Paginacodenotch/cursos.html
@@ -20,23 +20,23 @@
     <article class="art">
         <section class="art">
             <div class="titulo">
-            <p class="titulo_cursos">Nuestros Cursos</p>
+            <strong class="titulo_cursos">Nuestros Cursos</strong>
             </div>
             <div class="titulo">
                 <p class="descripcion">Una experiencia educativa intensiva, de corta duración y fundamentalmente práctica, dirigida a estudiantes con o sin experiencia previa para impulsar su carrera profesional en tecnología y dirigirla hacia futuras oportunidades.</p>
             </div>
             <section class="container">
                 <div class="container2">
-                    <p class="curso1">PRESENCIAL O EN REMOTO | FULL TIME</p>
+                    <strong class="curso1">PRESENCIAL O EN REMOTO | FULL TIME</strong>
                     <br>
-                    <p class="tcurso">Desarrollo Web y Móvil</p>
+                    <strong class="tcurso">Desarrollo Web y Móvil</strong>
                     <br>
                     <p class="info_curso">El Bootcamp de Desarrollo Web y Móvil te convertirá en un desarrollador/a web Full-Stack. Aprenderás a crear páginas web y aplicaciones móviles haciendo uso de las tecnologías más demandadas en la industria. Sin necesidad de conocimientos previos, nuestro Bootcamp te convierte en un profesional de la programación totalmente preparado para añadir valor en el mercado laboral desde el primer día.</p>
                 </div>
                 <div class="container2"> 
-                    <p class="curso1">PRESENCIAL O EN REMOTO | FULL TIME</p>
+                    <strong class="curso1">PRESENCIAL O EN REMOTO | FULL TIME</strong>
                     <br>
-                    <p class="tcurso">Data Analytics</p>
+                    <strong class="tcurso">Data Analytics</strong>
                     <br>
                     <p class="info_curso">El Bootcamp de Data Analytics te convertirá en un profesional de la Ciencia de Datos. Aprenderás a programar en Python, a almacenar y gestionar datos en mySQL, MongoDB y Cassandra. Además de comprender cualquier arquitectura de Big Data aprenderás a utilizar Docker, Hadoop, Hive, Kafka, estadística aplicada, aprenderás a utilizar los principales algoritmos y nociones de Deep learning y de NLP.</p>
                 </div>
