--- a/Paginacodenotch/equipo.html
+++ b/Paginacodenotch/equipo.html
@@ -29,7 +29,7 @@
         <div class="texto">
             <h4 class="profesional">Profesor</h4>
             <br>
-            <h1>jose Herrera</h1>
+            <h1 class="h1">jose Herrera</h1>
             <br>
             <p class="info">José es Doctor y Profesor en la facultad de informática de la Universidad
                 Complutense de Madrid.
@@ -49,7 +49,7 @@
             <div class="texto">
                 <h4 class="profesional">Profesor</h4>
                 <br>
-                <h1>Carmen martin</h1>
+                <h1 class="h1">Carmen martin</h1>
                 <br>
                 <p class="info">Menchu comenzó graduándose en bellas artes. Decidió redirigir su carrera profesional hacia el mundo del diseño web, combinando así sus pasiones por el arte y la tecnología. Dio sus primeros pasos en el diseño web de forma autodidacta, logrando así sus primeros empleos como diseñadora freelance. Tiene conocimientos en UX/UI y maneja herramientas como HTML, CSS, Angular, React o Wordpress. Aptitudes como el trabajo en equipo, la gestión y el liderazgo la definen.</p>
             </div>
@@ -61,7 +61,7 @@
             <div class="texto">
                 <h4 class="profesional">Profesor</h4>
                 <br>
-                <h1>Daniel Vera</h1>
+                <h1 class="h1">Daniel Vera</h1>
                 <br>
                 <p class="info">Daniel decidió dejar su trabajo en el mundo de la hostelería para apostar por lo que realmente le motivaba, apostó por formarse como desarrollaodr Full Stack y eso hizo que cambiara su vida por completo. Ahora es un apasionado de la tecnología que está en constante aprendizaje y disfruta de ayudar a otros a aprender. Aún siento un perfil completo, sigue formándose día a día con nuevas metodologías y herramientas. Algunas de las tecnologías que domina son, JavaScript, TypScript, Java, HTML5, CSS, Node.js, GIT, Angular, SQL, entre otras.</p>
             </div>
@@ -74,7 +74,7 @@
                 <h4 class="profesional">Experta en marca personal
                 </h4>
                 <br>
-                <h1>Lourdes Amaya</h1>
+                <h1 class="h1">Lourdes Amaya</h1>
                 <br>
                 <p class="info">Lourdes acompaña a nuestros alumnos durante el curso y es la responsable de su seguimiento. Imparte nuestro taller de marca personal en el que explica las posibilidades de LinkedIn y enseña tips prácticos sobre esta herramienta, y sobre preparación de entrevistas y de CV. Organiza nuestro evento Talent Meet y es el enlace entre nuestros alumnos y las empresas que buscan talento; acompañando a ambas partes en el proceso de contratación..</p>
             </div>
@@ -87,7 +87,7 @@
             <div class="texto">
                 <h4 class="profesional">Coach Personal</h4>
                 <br>
-                <h1>Kristine Kray</h1>
+                <h1 class="h1">Kristine Kray</h1>
                 <br>
                 <p class="info">Kristin trabaja como Tech Recruiter/IT Headhunter. Actualmente es Talent Acquisition Partner de Adevinta, una empresa de origen noruego con marketplaces alrededor del mundo y que en España tiene marcas como Infojobs, Fotocasa o Milanuncios. Ella imparte el workshop técnico sobre headhunters a través del coaching. En esta formación enseña a hacer búsqueda activa de empleo, aporta tips para las entrevistas y, posteriormente, trabaja de forma individual, en sesiones one to one, con cada alumno para adaptar su background al sector tech.</p>
             </div>
@@ -99,7 +99,7 @@
             <div class="texto">
                 <h4 class="profesional">Licenciada en Psicología</h4>
                 <br>
-                <h1>Adela Díez</h1>
+                <strong class="h1">Adela Díaz</strong>
                 <br>
                 <p class="info">Adela es una pieza clave en Codenotch ya que es la persona que se encarga de realizar la entrevista inicial a los alumnos. Facilita la comunicación de los estudiantes en todo momento y supone un gran apoyo para ellos a lo largo de la experiencia formativa..</p>
             </div>
