--- a/maquetacion_basica/homePage.html
+++ b/maquetacion_basica/homePage.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header class="menu">
-        <a class="enlaces" href="http://127.0.0.1:5500/maquetacion_basica/HomePage.html">Home</a>
-        <a class="enlaces" href="http://127.0.0.1:5500/maquetacion_basica/galery.html">Galería</a>
-        <a class="enlaces" href="http://127.0.0.1:5500/maquetacion_basica/blog.html">Blog</a>
+        <a class="enlaces" href="homePage.html">Home</a>
+        <a class="enlaces" href="galery.html">Galería</a>
+        <a class="enlaces" href="blog.html">Blog</a>
     </header>
 
     <div class="container">
