--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -75,8 +75,25 @@
                 </div>
             </div>
         </section>
-        <section class="proyects_page" id="proyects">
-
+        <section class="section_proyectos" id="proyects">
+            <div class="carta">
+                <figure class="img_container">
+                 <img class="img_carta" src="mallorca.jpeg" alt="">
+                </figure>
+                <strong  class="ciudad">Mallorca</strong>
+                <br>
+                <p  class="parrafo">Mallorca es una isla española situada en la parte central del archipiélago balear, en el mar Mediterráneo. Su capital, y también la de la comunidad autónoma de las Islas Baleares, es Palma de Mallorca,​ siguiéndola en importancia los municipios de Calviá, Inca y Manacor.</p>
+             </div>
+             <div class="carta">
+                <figure class="img_container">
+                 <img class="img_carta" src="paris.jpg" alt="">
+                </figure>
+                <strong  class="ciudad">Paris</strong>
+                <br>
+                <p  class="parrafo">Ciudad esplendorosa, vibrante, ciudad de la moda y los grandes gourmets, ciudad de amplias avenidas y plazas de esplendor, monumentos y edificios históricos, los mejores museos, París tiene todo lo que buscáis.</p>
+             </div>
+         </section>
+         <div class="borde2"></div>
         </section>
         <section class="form_page" id="form">
             <h2>Contactame!</h2>
