--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -78,19 +78,31 @@
         <section class="section_proyectos" id="proyects">
             <div class="carta">
                 <figure class="img_container">
-                 <img class="img_carta" src="mallorca.jpeg" alt="">
+                 <img class="img_carta" src="./img/blogPage.png" alt="">
                 </figure>
-                <strong  class="ciudad">Mallorca</strong>
+                <strong  class="ciudad">Pagina blog</strong>
                 <br>
-                <p  class="parrafo">Mallorca es una isla española situada en la parte central del archipiélago balear, en el mar Mediterráneo. Su capital, y también la de la comunidad autónoma de las Islas Baleares, es Palma de Mallorca,​ siguiéndola en importancia los municipios de Calviá, Inca y Manacor.</p>
+                <p  class="parrafo">Pagina blog para empezar a probar los conocimientos adquiridos en la primera clase de maquetación.</p>
              </div>
              <div class="carta">
                 <figure class="img_container">
-                 <img class="img_carta" src="paris.jpg" alt="">
+                 <img class="img_carta" src="./img/codenotchPage.png" alt="">
                 </figure>
-                <strong  class="ciudad">Paris</strong>
+                <strong  class="ciudad">Pagina Codenotch</strong>
                 <br>
-                <p  class="parrafo">Ciudad esplendorosa, vibrante, ciudad de la moda y los grandes gourmets, ciudad de amplias avenidas y plazas de esplendor, monumentos y edificios históricos, los mejores museos, París tiene todo lo que buscáis.</p>
+                <p  class="parrafo">Simulación de una landing page de Codenotch para ampliar nuestros conocimientos.</p>
+             </div>
+             <div class="carta">
+                <figure class="img_container">
+                 <img class="img_carta" src="./img/jangoTravel.png" alt="">
+                </figure>
+                <strong  class="ciudad">JanGo Travel</strong>
+                <br>
+                <p  class="parrafo">Pagina para una agencia de viaje donde los usuarios pueden sentirse atraidos por los sitios turisticos y solicitar información de los mismos.</p>
+                <br>
+                <p>Tegnología utilizada: HTML</p>
+                <br>
+                <a class="link" href="">Repositorio Git</a>
              </div>
          </section>
          <div class="borde2"></div>
