--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -83,6 +83,12 @@
                 <strong  class="ciudad">Pagina blog</strong>
                 <br>
                 <p  class="parrafo">Pagina blog para empezar a probar los conocimientos adquiridos en la primera clase de maquetación.</p>
+                <br>
+                <p>Tegnología utilizada: HTML y CSS.</p>
+                <br>
+                <p>Enlace: homePage.html</p>
+                <br>
+                <a class="link" href="https://github.com/Jango0712/maquetacion/tree/dia1">Repositorio Git</a>
              </div>
              <div class="carta">
                 <figure class="img_container">
@@ -91,6 +97,12 @@
                 <strong  class="ciudad">Pagina Codenotch</strong>
                 <br>
                 <p  class="parrafo">Simulación de una landing page de Codenotch para ampliar nuestros conocimientos.</p>
+                <br>
+                <p>Tegnología utilizada: HTML y CSS.</p>
+                <br>
+                <p>Enlace: home.html</p>
+                <br>
+                <a class="link" href="https://github.com/Jango0712/maquetacion/tree/dia2">Repositorio Git</a>
              </div>
              <div class="carta">
                 <figure class="img_container">
@@ -100,9 +112,11 @@
                 <br>
                 <p  class="parrafo">Pagina para una agencia de viaje donde los usuarios pueden sentirse atraidos por los sitios turisticos y solicitar información de los mismos.</p>
                 <br>
-                <p>Tegnología utilizada: HTML</p>
+                <p>Tegnología utilizada: HTML, CSS y JS.</p>
                 <br>
-                <a class="link" href="">Repositorio Git</a>
+                <p>Enlace: agencia.html</p>
+                <br>
+                <a class="link" href="https://github.com/Jango0712/maquetacion/tree/dia3">Repositorio Git</a>
              </div>
          </section>
          <div class="borde2"></div>
