--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -134,7 +134,15 @@
                 </div>
             </form>
         </section>
-        <footer>este es el footer</footer>
+        <footer class="footer">
+    
+            <h1 class="fh">Redes sociales</h1>
+        
+        <div>
+            <a class="link" href="https://www.facebook.com/Jango0712">Facebok</a>
+            <a class="link" href="https://www.instagram.com/jangoyt/?hl=es">Instagram</a>
+        </div>
+        </footer>
     </div>
 </body>
 </html>
